# databricks-e2e-data-product

./: .gitignore  README.md  databricks.yml  pyproject.toml  render.yml  requirements-dev.txt  requirements.txt  start.sh
.github/.workflows/: deploy.yml
.github/workflows/: deploy.yml
api/: app.py
data/: orders.csv  orders_prod.csv
resources/: job.yml
resources/jobs/: pipeline.yml
resources/pipelines/: pipeline.yml
src/: config.py  ingest.py  spark_session.py  test_connection.py  transform.py  validate.py
src/dlt/: pipeline.py
src/ingestion/: ingest_orders.py
src/ml/: customer_segmentation.py
src/tests/: __init.py__  test_connection.py
src/transformation/: transform_orders.py
src/utils/: config.py
src/validation/: validate_orders.py
