[project]
name = "databricks-e2e-data-product"
version = "0.0.1"
authors = [{ name = "nirdoshgandhi02@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    # Any dependencies for jobs and pipelines in this project can be added here
    # See also https://docs.databricks.com/dev-tools/bundles/library-dependencies
    #
    # LIMITATION: for pipelines, dependencies are cached during development;
    # add dependencies to the 'environment' section of your pipeline.yml file instead
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "databricks-dlt",
    "databricks-connect>=15.4,<15.5",
    "ipykernel",
]

[project.scripts]
main = "databricks-e2e-data-product.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
exclude = [
    "src/dlt/pipeline.py",   # spark is DLT-injected, not a normal import
]

[tool.pytest.ini_options]          # ADD THIS SECTION
testpaths  = ["tests"]             # where to look for tests
pythonpath = ["."]   
