[project]
name = "databricks_e2e_data_product"
version = "0.0.1"
authors = [{ name = "nirdoshgandhi02@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "databricks-dlt",
    "databricks-connect>=15.4,<15.5",
    "ipykernel",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
exclude = [
    "src/dlt/pipeline.py",   # spark is DLT-injected, not a normal import
]

[tool.pytest.ini_options]          # ADD THIS SECTION
testpaths  = ["tests"]             # where to look for tests
pythonpath = ["."]   
